crates/analyzer/tests/snapshots/errors__return_lt_mixed_types.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: `<` operands must have the same type
  ┌─ compile_errors/return_lt_mixed_types.fe:3:16
  │
3 │         return x < y
  │                ^   - this has incompatible type `u256`
  │                │    
  │                this has type `u128`


